letter spacing issue fix

--- a/ui.frontend/src/main/webpack/fe-components/components/fe-header/fe-header.scss
+++ b/ui.frontend/src/main/webpack/fe-components/components/fe-header/fe-header.scss
@@ -53,6 +53,7 @@
                     font-style: normal;
                     font-weight: 400;
                     line-height: normal;
+                    text-transform: none;
                     &.supportPhoneText {
                         font-size: 16px;
                     }
